--- a/composer.json
+++ b/composer.json
@@ -6,5 +6,9 @@
 	"require" : {
     },
 	"autoload" : { "psr-4": { "Arz\\StringEvaluationBundle": "" } },
-	"target-dir" : "Arz/StringEvaluationBundle"
+	"target-dir" : "Arz/StringEvaluationBundle",
+	"branch-alias" : {
+            "dev-master" : "1.1-dev"
+        }
+    }
 }
